# odrive-edge-controller

./: .pyproject.toml.swp  README.md  drive_server.py  evt.txt  evt2.txt  gc.py  go.sh  nohup.out  play.py  pyproject.toml
anki_support/: __init__.py
anki_support/anki_sdk/: __init__.py  car.py  car_position.py  controller.py  i_netransport.py  protocol.py
anki_support/anki_sdk/events/: __init__.py  abstractevent.py  carlight.py  localization_position.py  localization_transition.py  observer.py  offtrack.py  version_response.py
anki_support/anki_sdk/track/: __init__.py  curve.py  finish.py  i_piece.py  layout.py  piece.py  staright.py  start.py
anki_support/game_support/: __init__.py  car_scanner.py  player.py  simplegame.py  track_lighting.py  track_scanner.py
docs/: notes.md  protocol.h
odrive_edge_controller/: __main__.py  drive_server.py  old_drive_server.py  util.py
odrive_edge_controller/anki_sdk/: __init__.py  car.py  car_interface.py  car_position.py  controller.py  exceptions.py
odrive_edge_controller/anki_sdk/events/: bettery_response.py  localization_transition.py
odrive_edge_controller/anki_sdk/track/: i_piece.py  layout.py  staright.py  start.py
odrive_edge_controller/dev/: led.py  lighttest.py  play.py
odrive_edge_controller/game_support/: __init__.py  car_scanner.py  game.py  player.py  simplegame.py  track_scanner.py
